feat: add initial HTML structure with title and food list

--- a/index.html
+++ b/index.html
@@ -8,4 +8,16 @@
 <body>
     
 </body>
+    <h1 class="titulo"> Voce que sabe !!!</h1>
+    <div>
+        <ul class="roleta">
+            <li class="roleta-item">Lanche</li>
+            <li class="roleta-item">Hamburguer</li>
+            <li class="roleta-item">Pizza</li>
+            <li class="roleta-item">Sushi</li>
+            <li class="roleta-item">Churrasco</li>
+            <li class="roleta-item">Macarrão</li>
+        </ul>
+    </div>
+    
 </html>
