--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 </body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
-    <div>
+    <div class="container">
         <ul class="roleta">
             <li class="roleta-item">Lanche</li>
             <li class="roleta-item">Hamburguer</li>
@@ -18,6 +19,8 @@
             <li class="roleta-item">Churrasco</li>
             <li class="roleta-item">Macarrão</li>
         </ul>
+        <button class="botao" onclick="girarRoleta()">Girar</button>
+        <div class="resultado" id="resultado"></div>
     </div>
     
 </html>
