feat: add spin container for the spin wheel functionality

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <li class="roleta-item">Churrasco</li>
             <li class="roleta-item">Macarrão</li>
         </ul>
+
+        <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
         <div class="resultado" id="resultado"></div>
     </div>
