style: update list item class names for consistency in roleta

--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
     <div class="container">
         <ul class="roleta">
-            <li class="roleta-item">Lanche</li>
-            <li class="roleta-item">Hamburguer</li>
-            <li class="roleta-item">Pizza</li>
-            <li class="roleta-item">Sushi</li>
-            <li class="roleta-item">Churrasco</li>
-            <li class="roleta-item">Macarrão</li>
+            <li class="item">Lanche</li>
+            <li class="item">Hamburguer</li>
+            <li class="item">Pizza</li>
+            <li class="item">Sushi</li>
+            <li class="item">Churrasco</li>
+            <li class="item">Macarrão</li>
         </ul>
 
         <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
         <div class="resultado" id="resultado"></div>
     </div>
-    
+</body>   
 </html>
