--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         <button class="botao" onclick="girarRoleta()">Girar</button>
         <div class="resultado" id="resultado"></div>
     </div>
+
+    <script src="script.js"></script>
 </body>   
 </html>
