style: update roleta list items to include span elements for better styling

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
     <div class="container">
-        <ul class="roleta">
-            <li class="item">Lanche</li>
-            <li class="item">Hamburguer</li>
-            <li class="item">Pizza</li>
-            <li class="item">Sushi</li>
-            <li class="item">Churrasco</li>
-            <li class="item">Macarrão</li>
-        </ul>
+    <ul class="roleta" id="roleta">
+        <li class="item"><span class="texto-item">Lanche</span></li>
+        <li class="item"><span class="texto-item">Hamburguer</span></li>
+        <li class="item"><span class="texto-item">Pizza</span></li>
+        <li class="item"><span class="texto-item">Sushi</span></li>
+        <li class="item"><span class="texto-item">Churrasco</span></li>
+        <li class="item"><span class="texto-item">Macarrão</span></li>
+    </ul>
+
 
         <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
