--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 <body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
     <div class="container">
-    <ul class="roleta" id="roleta">
-        <li class="item"><span class="texto-item">Lanche</span></li>
-        <li class="item"><span class="texto-item">Hamburguer</span></li>
-        <li class="item"><span class="texto-item">Pizza</span></li>
-        <li class="item"><span class="texto-item">Sushi</span></li>
-        <li class="item"><span class="texto-item">Churrasco</span></li>
-        <li class="item"><span class="texto-item">Macarrão</span></li>
-    </ul>
+        <ul class="roleta" id="roleta">
+            <li class="item"><span class="texto-item">Pastel</span></li>
+            <li class="item"><span class="texto-item">Hamburguer</span></li>
+            <li class="item"><span class="texto-item">Pizza</span></li>
+            <li class="item"><span class="texto-item">Sushi</span></li>
+            <li class="item"><span class="texto-item">Churrasco</span></li>
+            <li class="item"><span class="texto-item">Macarrão</span></li>
+            <li class="item"><span class="texto-item">Esfiha</span></li>
+            <li class="item"><span class="texto-item">Salgado</span></li>
+            
+            <!--
+            -->
 
-
+        </ul>
         <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
-        <div class="resultado" id="resultado"></div>
     </div>
 
     <script src="script.js"></script>
