feat: add base form display

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
     </div>
-
+    <form class="formulario"
+        action="index.html" method="get">
+        <button class="botao-adicionar" type="submit">Adicionar Opção</button>
+    </form>
     <script src="script.js"></script>
 </body>   
 </html>
