--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
-    <div class="container">
+    <div class="container_1">
         <ul class="roleta" id="roleta">
             <li class="item"><span class="texto-item">Pastel</span></li>
             <li class="item"><span class="texto-item">Hamburguer</span></li>
@@ -26,10 +26,24 @@
         <div class="spin"></div>
         <button class="botao" onclick="girarRoleta()">Girar</button>
     </div>
-    <form class="formulario"
-        action="index.html" method="get">
-        <button class="botao-adicionar" type="submit">Adicionar Opção</button>
-    </form>
+    <div class="container_2">
+        <table>
+            <thead>
+                <tr>
+                    <th>Comidas</th>
+                </tr>
+                <tr>
+                    <th>Excluir</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <form class="formulario" action="index.html" method="get">
+            <button class="botao-adicionar" type="submit">Adicionar Opção</button>
+        </form>
+    </div>
+
     <script src="script.js"></script>
 </body>   
 </html>
