feat: add a second subcontainer to better position the roulette spin and button

--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 <body>
     <h1 class="titulo"> Voce que sabe !!!</h1>
     <div class="container_1">
-        <ul class="roleta" id="roleta">
-            <li class="item"><span class="texto-item">Pastel</span></li>
-            <li class="item"><span class="texto-item">Hamburguer</span></li>
-            <li class="item"><span class="texto-item">Pizza</span></li>
-            <li class="item"><span class="texto-item">Sushi</span></li>
-            <li class="item"><span class="texto-item">Churrasco</span></li>
-            <li class="item"><span class="texto-item">Macarrão</span></li>
-            <li class="item"><span class="texto-item">Esfiha</span></li>
-            <li class="item"><span class="texto-item">Salgado</span></li>
-            
+        <div class="subcontainer_1">
+            <ul class="roleta" id="roleta">
+
+                <li class="item"><span class="texto-item">Pastel</span></li>
+                <li class="item"><span class="texto-item">Hamburguer</span></li>
+                <li class="item"><span class="texto-item">Pizza</span></li>
+                <li class="item"><span class="texto-item">Sushi</span></li>
+                <li class="item"><span class="texto-item">Churrasco</span></li>
+                <li class="item"><span class="texto-item">Macarrão</span></li>
+                <li class="item"><span class="texto-item">Esfiha</span></li>
+                <li class="item"><span class="texto-item">Salgado</span></li>
             <!--
             -->
-
-        </ul>
-        <div class="spin"></div>
-        <button class="botao" onclick="girarRoleta()">Girar</button>
+            </ul>
+            <div class="spin"></div>
+            <div class="center-dot"></div>
+            <button class="botao-girar" onclick="girarRoleta()">Girar</button>
+        </div>
     </div>
+    
     <div class="container_2">
         <div class="subcontainer_2">
             <table>
