style: add  style to winner arrow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!--
             -->
             </ul>
-            <div class="spin"></div>
+            <div class="arrow"></div>
             <div class="center-dot"></div>
             <button class="botao-girar" onclick="girarRoleta()">Girar</button>
         </div>
