feat: add div arrow-border outside of arrow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <!--
             -->
             </ul>
-            <div class="arrow"></div>
+            <div class="arrow-border">
+                <div class="arrow"></div>
+            </div>
             <div class="center-dot"></div>
             <button class="botao-girar" onclick="girarRoleta()">Girar</button>
         </div>
