feat: create basic form for data input

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 </tbody>
             </table>
             <form class="formulario" action="index.html" method="get">
-                <button class="adicionar" type="submit">Adicionar Opção</button>
+                <input type="text" id="txtComida" name="comida" placeholder="Digite outra!..."/>
+                <button class="adicionar" type="submit">Adicionar</button>
             </form>
         </div>
     </div>
