--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo"> Voce que sabe !!!</h1>
     <div class="container_1">
         <div class="subcontainer_1">
             <ul class="roleta" id="roleta">
@@ -44,12 +43,12 @@
                 </tbody>
             </table>
             <form class="formulario" action="index.html" method="get">
-                <input type="text" id="txtComida" name="comida" placeholder="Digite outra!..."/>
+                <input type="text" id="txtComida" name="comida" placeholder="Digite aqui!"/>
                 <button class="adicionar" type="submit">Adicionar</button>
             </form>
         </div>
     </div>
-
+    <h1 class="titulo"> Voce que sabe!</h1>
     <script src="script.js"></script>
 </body>   
 </html>
