feat: add result text

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="center-dot"></div>
             <button class="botao-girar" onclick="girarRoleta()">Girar</button>
         </div>
+        <p id="result"></p>
     </div>
     
     <div class="container_2">
