feat: implement adicionarComida to add new food items from form

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <tbody id="tableBody">
                 </tbody>
             </table>
-            <form class="formulario" action="index.html" method="get">
-                <input type="text" id="txtComida" name="comida" placeholder="Digite aqui!"/>
-                <button class="adicionar" type="submit">Adicionar</button>
-            </form>
+                <form class="formulario" onsubmit="adicionarComida(event)">
+                    <input type="text" id="txtComida" name="comida" placeholder="Digite aqui!"/>
+                    <button class="adicionar" type="submit">Adicionar</button>
+                </form>
         </div>
     </div>
     <h1 class="titulo"> Voce que sabe!</h1>
