style: add roleta-wrapper

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container_1" id="container_1">
         <h1 class="titulo"> Voce que sabe!</h1>
         <div class="subcontainer_1">
-            <ul class="roleta" id="roleta">
+            <div class="roleta-wrapper">
+                <ul class="roleta" id="roleta">
                 <li class="item"><span class="texto-item">Pastel</span></li>
                 <li class="item"><span class="texto-item">Hamburguer</span></li>
                 <li class="item"><span class="texto-item">Pizza</span></li>
@@ -19,7 +20,9 @@
                 <li class="item"><span class="texto-item">Macarrão</span></li>
                 <li class="item"><span class="texto-item">Esfiha</span></li>
                 <li class="item"><span class="texto-item">Salgado</span></li>
-            </ul>
+                </ul>
+            </div>
+
 
             <div class="arrow-border">
                 <div class="arrow"></div>
