fix: incorrect colors and layout issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <p id="result"></p>
 
-        <button id="tabelaAcionador" onclick="visibilidadeFormulario()">Adicionar <br> ou<br>Excluir</button>
+        <button id="tabelaAcionador" onclick="visibilidadeFormulario()">Adicionar <br> ou<br>excluir</button>
     </div>
     
     <div class="container_2" id="container_2">
