fix: text accents and final wording

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 </head>
 <body>
     <div class="container_1" id="container_1">
-        <h1 class="titulo"> Voce que sabe!</h1>
+        <h1 class="titulo"> Você que sabe!</h1>
         <div class="subcontainer_1">
             <div class="roleta-wrapper">
                 <ul class="roleta" id="roleta">
                 <li class="item"><span class="texto-item">Pastel</span></li>
-                <li class="item"><span class="texto-item">Hamburguer</span></li>
+                <li class="item"><span class="texto-item">Hambúrguer</span></li>
                 <li class="item"><span class="texto-item">Pizza</span></li>
                 <li class="item"><span class="texto-item">Sushi</span></li>
-                <li class="item"><span class="texto-item">Churrasco</span></li>
                 <li class="item"><span class="texto-item">Macarrão</span></li>
-                <li class="item"><span class="texto-item">Esfiha</span></li>
-                <li class="item"><span class="texto-item">Salgado</span></li>
                 </ul>
             </div>
 
