refactor: move page content into main semantic container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <main id="page">
     <div class="container_1" id="container_1">
         <h1 class="titulo"> Você que sabe!</h1>
         <div class="subcontainer_1">
@@ -53,6 +55,8 @@
             </form>
         </div>
     </div>
+    </main>
+    
     <script src="script.js"></script>
 </body>   
 </html>
