--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Não sabe o que comer? Use nossa roleta online para escolher sua refeição. Simples, rápida e divertida para acabar com a indecisão!">
     <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.counter.dev/script.js" data-id="b4aea671-312f-48c6-a191-9fe98206b6fb" data-utcoffset="-3"></script>
 </head>
 <body>
 
