style: add missing shadow effects

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             </div>
 
 
-            <div class="arrow-border">
+            <div class="arrow-shadow"></div>
+            <div class="arrow-border"> 
                 <div class="arrow"></div>
             </div>
+
 
             <div class="center-dot"></div>
             <button class="botao-girar" onclick="girarRoleta()" aria-label="Girar roleta para escolher o que comer">Girar</button>
