fix: correct table column label

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <thead>
                     <tr class="teste">
                         <td>Comidas</td>
-                        <td>Excluir</td>
+                        <td>Opções</td>
                     </tr>
                 </thead>
                 <tbody id="tableBody">
